# hybrid-automaton-library

./: .gitignore  CMakeLists.txt  ControlMode.cpp  LICENSE  README.md  documentation.html  doxyfile  error_handling.h  hybrid_automaton.sln  hybrid_automaton.vcproj  hybrid_automaton_registration.h  main.cpp
cmake/Modules/: FindEigen3.cmake  FindGMock.cmake  FindTinyXML.cmake
docs/: class_diagram.dia  doxyfile.in  doxygen_redirect_html.in  overview.md  sequence_create.dia  sequence_exchange.dia  sequence_execute.dia
examples/: CMakeLists.txt  HybridAutomatonCreator.cpp  HybridAutomatonCreator.h  example_gc.cpp
hybrid_automaton_manager/: HybridAutomatonManager.vcproj
hybrid_automaton_manager/include/: HybridAutomatonManager.h
hybrid_automaton_manager/include/ros_bridge/: Network.h  NetworkUpdatable.h  RTBlackBoard.h  TCPserver.h
hybrid_automaton_manager/include/ros_bridge/msgs/: DataObject.h  Float64.h  Float64MultiArray.h  NetworkData.h  RequestROSSubscription.h  String.h
hybrid_automaton_manager/msvc9/HybridAutomatonManager/: HybridAutomatonManager.vcproj
hybrid_automaton_manager/src/: HybridAutomatonManager.cpp
hybrid_automaton_manager/src/ros_bridge/: Network.cpp  NetworkUpdatable.cpp  RTBlackBoard.cpp  TCPclient.cpp  TCPcomm.cpp  TCPserver.cpp
hybrid_automaton_manager/src/ros_bridge/msgs/: DataObject.cpp  Float64.cpp  Float64MultiArray.cpp  NetworkData.cpp  RequestROSSubscription.cpp  String.cpp
include/: CSpaceMilestone.h  HybridAutomaton.h  Milestone.h  MilestoneFactory.h  MotionBehaviour.h
include/hybrid_automaton/: AcousticSensor.h  CSpaceBlackBoardMilestone.h  CSpaceMilestone.h  ClockSensor.h  ConfigurationConvergenceCondition.h  ControlMode.h  ControlSet.h  ControlSwitch.h  Controller.h  DescriptionTree.h  DescriptionTreeNode.h  DescriptionTreeNodeXML.h  DescriptionTreeXML.h  ForceTorqueMilestone.h  ForceTorqueSensor.h  FrameDisplacementSensor.h  FrameOrientationSensor.h  FramePoseSensor.h  HybridAutomaton.h  HybridAutomatonAbstractFactory.h  HybridAutomatonFactory.h  HybridAutomatonOStringStream.h  HybridAutomatonRBOFactory.h  HybridAutomatonRegistration.h  HybridAutomatonStringStream.h  JointConfigurationSensor.h  JointVelocitySensor.h  JumpCondition.h  LocalDecisionCriterion.h  Milestone.h  MilestoneFactory.h  MotionBehaviour.h  NonblockingPrinting.h  OpSpaceMilestone.h  PostureMilestone.h  Quaternion.h  ROSTopicSensor.h  Sensor.h  Serializable.h  StrainSensor.h  (+7 more)
include/hybrid_automaton_manager/: AbstractHybridAutomatonManager.h  AbstractHybridAutomatonManagerCmd.h  HybridAutomatonManager.h  HybridAutomatonManagerCmd.h
include/hybrid_automaton_manager/ros_bridge/: Network.h  NetworkUpdatable.h  RTBlackBoard.h  TCPclient.h  TCPcomm.h
include/hybrid_automaton_manager/ros_bridge/msgs/: Float64MultiArray.h  JointState.h  NetworkData.h  RequestROSSubscription.h  String_msgs.h  Transform.h
include/sequential_hybrid_automaton_manager/: SequentialHybridAutomatonManager.h  SequentialHybridAutomatonManagerCmd.h
msvc9/HybridAutomaton/: HybridAutomaton.vcproj
msvc9/HybridAutomatonManager/: HybridAutomatonManager.vcproj
msvc9/SequentialHybridAutomatonManager/: SequentialHybridAutomatonManager.vcproj
msvc9/libhybrid_automaton/: ReadMe.txt  libhybrid_automaton.vcproj
msvc9/libhybrid_automaton/Debug/: libhybrid_automaton.lib
src/: AcousticSensor.cpp  CMakeLists.txt  CSpaceMilestone.cpp  ClockSensor.cpp  ConfigurationConvergenceCondition.cpp  ControlMode.cpp  ControlSet.cpp  ControlSwitch.cpp  Controller.cpp  DescriptionTree.cpp  DescriptionTreeNode.cpp  DescriptionTreeNodeXML.cpp  DescriptionTreeXML.cpp  ForceTorqueSensor.cpp  FrameDisplacementSensor.cpp  FrameOrientationSensor.cpp  FramePoseSensor.cpp  HybridAutomaton.cpp  HybridAutomatonAbstractFactory.cpp  HybridAutomatonFactory.cpp  HybridAutomatonOStringStream.cpp  HybridAutomatonRBOFactory.cpp  HybridAutomatonStringStream.cpp  JointConfigurationSensor.cpp  JointVelocitySensor.cpp  JumpCondition.cpp  Milestone.cpp  MilestoneFactory.cpp  MotionBehaviour.cpp  ROSTopicSensor.cpp  Sensor.cpp  StrainSensor.cpp  SubjointConfigurationSensor.cpp  SubjointVelocitySensor.cpp  TimeCondition.cpp  graphviz.cpp  hybrid_automaton_visualizer.cpp
src/hybrid_automaton/: CSpaceBlackBoardMilestone.cpp  CSpaceMilestone.cpp  ForceTorqueMilestone.cpp  HybridAutomaton.cpp  LocalDecisionCriterion.cpp  Milestone.cpp  MilestoneFactory.cpp  MotionBehaviour.cpp  OpSpaceMilestone.cpp  PostureMilestone.cpp  TemporalMilestone.cpp  XMLDeserializer.cpp  XMLSerializer.cpp
src/hybrid_automaton_manager/: AbstractHybridAutomatonManager.cpp  HybridAutomatonManager.cpp
src/hybrid_automaton_manager/ros_bridge/: RTBlackBoard.cpp  TCPcomm.cpp
src/hybrid_automaton_manager/ros_bridge/msgs/: DataObject.cpp  Float64.cpp  Float64MultiArray.cpp  JointState.cpp  NetworkData.cpp  RequestROSSubscription.cpp  String.cpp  Transform.cpp
src/sequential_automaton_manager/: SequentialHybridAutomatonManager.cpp
tests/: CMakeLists.txt  MockDescriptionTree.h  MockDescriptionTreeNode.h  controller_test.cpp  controlmode_test.cpp  controlset_test.cpp  controlswitch_test.cpp  description_tree_test.cpp  description_tree_tinyxml_test.cpp  ftsensor_test.cpp  gtest_example.cpp  gtest_mem_main.cpp  hybrid_automaton_serialization_test.cpp  hybrid_automaton_stepping_test.cpp  hybrid_automaton_tests.vcproj  jumpcondition_test.cpp  protype_test.cpp
vs2008/libhybrid_automaton/: libhybrid_automaton.sln  libhybrid_automaton.vcproj
